<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_2"
    android:orientation="vertical"
    tools:context=".DoogyPage1">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="334dp"
        android:layout_height="334dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="277dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_4" />

    <Button
        android:id="@+id/btnPlay2"
        android:layout_width="116dp"
        android:layout_height="71dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="497dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="207dp"
        android:text="PLAY"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnEat"
        android:layout_width="121dp"
        android:layout_height="71dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="497dp"
        android:layout_marginBottom="207dp"
        android:text="EAT"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlay2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Space
        android:layout_width="434dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="475dp"
        android:layout_marginBottom="259dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWash"
        android:layout_width="105dp"
        android:layout_height="68dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="497dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="207dp"
        android:text="WASH"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/btnPlay2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/eatStatusLevel"
        android:layout_width="87dp"
        android:layout_height="35dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="598dp"
        android:layout_marginEnd="271dp"
        android:layout_marginBottom="101dp"
        android:gravity="center|center_horizontal"
        android:text="eat level: "
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playStatusLevel"
        android:layout_width="81dp"
        android:layout_height="37dp"
        android:layout_marginStart="179dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="104dp"
        android:gravity="center"
        android:text="Play Level"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/cleanStatuslevel"
        android:layout_width="91dp"
        android:layout_height="27dp"
        android:layout_marginStart="301dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="104dp"
        android:gravity="center|center_horizontal"
        android:text="clean level"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>